# SE3330_HyperCraft

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows-mingw.yml
FinalRelease/: HyperCraft Class diagram.oob  HyperCraft Class diagram.oom  LogicalView.ldm  Use-case.oob  Use-case.oom  Vision文档.docx  Workspace.sws  系统测试报告.docx  系统测试用例.xlsx  软件架构文档.docx  项目总结报告.docx
TechPrototype/: DeploymentView.oom  HyperCraft Class diagram.oob  HyperCraft Class diagram.oom  Implement View.oob  LogicalView.ldb  Use-case.oom  Workspace.sws  迭代计划.docx  迭代评估报告#1.docx
UIPrototype/: HyperCraft-UseCase.docx  Use-case.oom  Vision文档.docx  迭代计划.docx  迭代评估报告.docx
block/: CMakeLists.txt
block/block/: air.hpp  apple.hpp  blue_ice.hpp  brown_mushroom.hpp  cactus.hpp  cobblestone.hpp  dead_bush.hpp  dirt.hpp  glass.hpp  grass.hpp  grass_block.hpp  gravel.hpp  ice.hpp  leaves.hpp  log.hpp  plank.hpp  red_mushroom.hpp  sand.hpp  sandstone.hpp  snow.hpp  stone.hpp  vine.hpp  water.hpp
block/block/public/: CrossMesh.hpp  InnerSurfaceMesh.hpp  Trait.hpp
block/generator/: Block.cpp.in  Block.hpp.in  block_gen.cpp
block/include/block/: Block.hpp  BlockFace.hpp  BlockMesh.hpp  BlockProperty.hpp
block/test/: test_block.cpp
client/: CMakeLists.txt
client/dep/: CMakeLists.txt
client/dep/FastNoise2/: CMakeLists.txt
client/dep/FastNoise2/src/: CMakeLists.txt
client/dep/MyVK/src/rg/: RenderGraphExecutor.cpp
client/include/: BlockAlgo.hpp
client/include/client/: Application.hpp  BlockLightAlgo.hpp  BlockMeshAlgo.hpp  BlockVertex.hpp  Camera.hpp  Chunk.hpp  ChunkGenerator.hpp  ChunkLighter.hpp  ChunkMesh.hpp  ChunkMesher.hpp  ChunkWorkerBase.hpp  ClientBase.hpp  Config.hpp  DefaultTerrain.hpp  ENetClient.hpp  GlobalTexture.hpp  LocalClient.hpp  TerrainBase.hpp  WorkerBase.hpp  World.hpp  WorldRenderer.hpp
client/include/client/mesh/: MeshCluster.hpp  MeshHandle.hpp  MeshInfo.hpp  MeshPool.hpp
client/include/client/pass/: ChunkCullPass.hpp  ChunkOpaquePass.hpp  ChunkTransparentPass.hpp  DepthHierarchyPass.hpp  FixTJunctionPass.hpp  OITBlendPass.hpp  WorldRenderGraph.hpp
client/include/client/rg/: ChunkCullPass.hpp  ChunkOpaquePass.hpp  ChunkTransparentPass.hpp  DepthHierarchyPass.hpp  FixTJunctionPass.hpp  OITBlendPass.hpp  WorldRenderGraph.hpp
client/shader/: CMakeLists.txt
client/src/: Application.cpp  Camera.cpp  Chunk.cpp  ChunkGenerator.cpp  ChunkLighter.cpp  ChunkMesher.cpp  ChunkWorkerBase.cpp  DefaultTerrain.cpp  ENetClient.cpp  GlobalTexture.cpp  LocalClient.cpp  World.cpp  WorldLoadingList.inl  WorldRenderer.cpp  main.cpp
common/: CMakeLists.txt
common/dep/: CMakeLists.txt
common/include/common/: Biome.hpp  Block.hpp  BlockFace.hpp  BlockMesh.hpp  ByteStream.hpp  Endian.hpp  Light.hpp  Message.hpp  Position.hpp  Size.hpp  WorkPool.hpp  WorkQueue.hpp  WorkerBase.hpp  WorldDatabase.hpp
common/src/: WorkPool.cpp  WorkQueue.cpp  WorldDatabase.cpp
resource/: CMakeLists.txt
resource/dep/: CMakeLists.txt
resource/include/resource/texture/: BlockTexture.hpp
server/: CMakeLists.txt
server/dep/: CMakeLists.txt
server/include/server/: ENetServer.hpp
server/src/: ENetServer.cpp  main.cpp
texture/: CMakeLists.txt
texture/include/texture/: BlockTexture.hpp  MiscTexture.hpp
